# mega_dwnl

./: .gitignore  links.txt  pyproject.toml
mega_dwnl/: main.py
